--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,16 +8,19 @@
   justify-content: space-between;
 }
 
-#logo, #menu {
+#logo,
+#menu {
   color: #387ed1;
   max-height: 15px;
   margin: auto;
 }
 
-#logo{
+#logo {
   margin-left: 30%;
 }
-#menu{
+#menu {
+  margin-right: 0;
+  /* position: fixed; */
   display: none;
 }
 
@@ -34,6 +37,40 @@
   opacity: 0.8;
 }
 
+.menu {
+  position: fixed;
+  top: 0;
+  right: -300px; /* Start off-screen */
+  width: 300px;
+  height: 100%;
+  background-color: #333;
+  color: white;
+  transition: right 0.5s ease;
+}
+
+.menu.visible {
+  right: 0; /* Slide into view */
+}
+
+.menu ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.menu img {
+  width: 35px;
+  /* width: 50%; */
+}
+.menu li {
+  padding: 20px;
+  border-bottom: 1px solid #444;
+}
+
+.menu li:hover {
+  background-color: #444;
+}
+
 #nav-bottom {
   margin-top: -15px;
   height: 1.5px;
@@ -46,10 +83,10 @@
   flex-direction: column;
   list-style: none;
 }
+
 #main ul img {
-  margin: 50px 60px;
+  margin: 50px auto;
   width: 50%;
-  margin-left: 25%;
 }
 #main li {
   margin: auto;
@@ -84,7 +121,7 @@ pre {
   transition: 0.5s ease;
 }
 
-#calculator{
+#calculator {
   justify-content: space-around;
 }
 #main li button:hover {
@@ -104,7 +141,7 @@ pre {
   background-color: RGB(217 212 212);
 }
 
-#cal-fields{
+#cal-fields {
   display: flex;
   flex-direction: column;
 }
@@ -120,7 +157,7 @@ label {
   margin: 3px;
 }
 
-#cal-fields ul{
+#cal-fields ul {
   list-style: none;
   display: flex;
   justify-content: space-between;
@@ -143,7 +180,7 @@ label {
   align-self: center;
 }
 
-#not-supported{
+#not-supported {
   display: none;
 }
 /* For devices with a maximum width of 767px */
@@ -152,31 +189,33 @@ label {
     display: none;
     /* Your styles for the selected elements */
   }
-  
-  #menu, #logo{
+
+  #menu,
+  #logo {
     margin: 20px;
   }
 
-  #menu{
+  #menu {
     display: block;
+    transition: 1s ease-in-out;
+    width: 20px;
+    height: 20px;
   }
 
   #main ul img {
-  /* margin: 50px 60px; */
-  width: 100%;
-  margin: 50px auto 50px auto;
-}
+    width: 100%;
+  }
   /* Your CSS rules for small screens */
 }
 
 /* For devices with a minimum width of 768px and a maximum width of 991px */
 @media (max-width: 300px) {
-  #supported{
+  #supported {
     display: none;
     /* background-color: black; */
   }
 
-  #not-supported{
+  #not-supported {
     display: block;
     text-align: center;
     margin-top: 100%;
@@ -184,10 +223,34 @@ label {
     /* background-color: black; */
   }
 
-  *{
+  * {
     background-color: black;
   }
   /* Your CSS rules for medium screens */
 }
 
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
 
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.fade-out {
+  animation: fadeOut 0.5s forwards;
+}
+
+.fade-in {
+  animation: fadeIn 0.5s forwards;
+}
